--- a/moodstore-appointment/pom.xml
+++ b/moodstore-appointment/pom.xml
@@ -2,16 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.kci.moodstore</groupId>
     <artifactId>moodstore-appointment</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
-    <name>moodstore-appointment</name>
     <description>解忧事务所 -- 心理咨询预约模块</description>
 
     <parent>
-        <artifactId>moodstore</artifactId>
-        <groupId>com.kci</groupId>
+        <artifactId>moodstore-parent</artifactId>
+        <groupId>com.kci.moodstore</groupId>
         <version>1.0.0</version>
     </parent>
 
