--- a/moodstore-pstest/pom.xml
+++ b/moodstore-pstest/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.kci.moodstore</groupId>
-    <artifactId>pstest</artifactId>
+    <artifactId>moodstore-pstest</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
-    <name>pstest</name>
     <description>解忧事务所 -- 心理测试模块</description>
 
     <parent>
-        <artifactId>moodstore</artifactId>
-        <groupId>com.kci</groupId>
+        <artifactId>moodstore-parent</artifactId>
+        <groupId>com.kci.moodstore</groupId>
         <version>1.0.0</version>
     </parent>
+
+
 
 </project>
