--- a/moodstore-pstest/src/main/resources/application.properties
+++ b/moodstore-pstest/src/main/resources/application.properties
@@ -1,28 +1,28 @@
-# 应用名称
-spring.application.name=user
+# server-name
+spring.application.name=ptest
 
-#服务端口
-server.port=9001
+server.port=9003
 
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.name = defaultDataSource
-spring.datasource.url = jdbc:mysql://localhost:3306/moodstore-user?serverTimezone=GMT%2b8
+spring.datasource.url = jdbc:mysql://localhost:3306/moodstore-pstest?serverTimezone=GMT%2b8
 spring.datasource.username = root
 spring.datasource.password = lzhlzh594594
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 
-# Mybatis
-mybatis.mapper-locations = classpath:mapper/*.xml
-mybatis.type-aliases-package = com.kci.moodstore.user.model
-mybatis.configuration.useGeneratedKeys = true
-mybatis.configuration.mapUnderscoreToCamelCase = true
+spring.cloud.nacos.discovery.server-addr = localhost:8848
+spring.cloud.nacos.discovery.register-enabled = true
+
+# Mybatis-Plus
+mybatis-plus.mapper-locations = classpath:mapper/*.xml
+mybatis-plus.type-aliases-package = com.kci.moodstore.pstest.model
 
 pagehelper.propertyName=propertyValue
 pagehelper.reasonable=false
 pagehelper.defaultCount=true
 
 # dubbo
-dubbo.application.name=provider-application
+dubbo.application.name=consumer-application
 
 dubbo.protocol.id=dubbo
 dubbo.protocol.name=dubbo
@@ -32,5 +32,3 @@ dubbo.registry.address=nacos://192.168.33.1:8848
 dubbo.registry.password=nacos
 dubbo.registry.username=nacos
 dubbo.registry.register-mode=interface
-
-
