--- a/moodstore-user/src/main/resources/application.properties
+++ b/moodstore-user/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.name = defaultDataSource
 spring.datasource.url = jdbc:mysql://localhost:3306/moodstore-user?serverTimezone=GMT%2b8
 spring.datasource.username = root
-spring.datasource.password = lzhlzh594594
+spring.datasource.password = 123456
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 
 # Mybatis
@@ -28,7 +28,7 @@ dubbo.protocol.id=dubbo
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
 
-dubbo.registry.address=nacos://192.168.33.1:8848
+dubbo.registry.address=nacos://localhost:8848
 dubbo.registry.password=nacos
 dubbo.registry.username=nacos
 dubbo.registry.register-mode=interface
