--- a/moodstore-auth/pom.xml
+++ b/moodstore-auth/pom.xml
@@ -4,7 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>moodstore-auth</artifactId>
     <version>1.0.0</version>
-    <description>解忧事务所 -- </description>
+    <packaging>jar</packaging>
+    <description>解忧事务所 -- 验证模块</description>
 
     <parent>
         <artifactId>moodstore-parent</artifactId>
