--- a/moodstore-pstest/src/main/resources/application.properties
+++ b/moodstore-pstest/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.name = defaultDataSource
 spring.datasource.url = jdbc:mysql://localhost:3306/moodstore-pstest?serverTimezone=GMT%2b8
 spring.datasource.username = root
-spring.datasource.password = xxxxxx
+spring.datasource.password = lzhlzh594594
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 
 spring.cloud.nacos.discovery.server-addr = localhost:8848
