勉强完成一点收藏功能

--- a/moodstore-framework/pom.xml
+++ b/moodstore-framework/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>moodstore-framework-common</module>
         <module>moodstore-framework-database</module>
+        <module>moodstore-framework-cache</module>
     </modules>
 
 </project>
