--- a/moodstore-pstest/src/main/resources/application.properties
+++ b/moodstore-pstest/src/main/resources/application.properties
@@ -7,8 +7,20 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.name = defaultDataSource
 spring.datasource.url = jdbc:mysql://localhost:3306/moodstore-pstest?serverTimezone=GMT%2b8
 spring.datasource.username = root
-spring.datasource.password = lzhlzh594594
+spring.datasource.password = xxxxxx
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=2
+spring.redis.timeout=PT30S
+spring.redis.password=977594
+
+spring.redis.lettuce.pool.max-active=30
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.max-wait=PT10S
+spring.redis.lettuce.pool.min-idle=1
+spring.redis.lettuce.pool.enabled=true
 
 spring.cloud.nacos.discovery.server-addr = localhost:8848
 spring.cloud.nacos.discovery.register-enabled = true
