--- a/moodstore-user/src/main/resources/application.properties
+++ b/moodstore-user/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=9001
 
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.name = defaultDataSource
-spring.datasource.url = jdbc:mysql://localhost:3306/moodstore-user?serverTimezone=GMT%2b8
+spring.datasource.url = jdbc:mysql://localhost:3306/moodstore?serverTimezone=GMT%2b8
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
