--- a/moodstore-pstest/src/main/resources/application.properties
+++ b/moodstore-pstest/src/main/resources/application.properties
@@ -5,15 +5,15 @@ server.port=9003
 
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.name = defaultDataSource
-spring.datasource.url = jdbc:mysql://localhost:3306/moodstore-pstest?serverTimezone=GMT%2b8
+spring.datasource.url = jdbc:mysql://localhost:3306/moodstore-pstest?allowMultiQueries=true
 spring.datasource.username = root
-spring.datasource.password = xxxxxx
+spring.datasource.password = lzhlzh594594
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 
 spring.redis.host=localhost
 spring.redis.port=6379
-spring.redis.database=2
-spring.redis.timeout=PT30S
+spring.redis.database=3
+spring.redis.timeout=5000
 spring.redis.password=977594
 
 spring.redis.lettuce.pool.max-active=30
