--- a/moodstore-auth/src/main/resources/application.properties
+++ b/moodstore-auth/src/main/resources/application.properties
@@ -1,4 +1,23 @@
 # 应用名称
 spring.application.name=moodstore-auth
+server.port=9011
 
+spring.cloud.nacos.discovery.server-addr= = localhost:8848
+
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.name = defaultDataSource
+spring.datasource.url = jdbc:mysql://localhost:3306/moodstore?serverTimezone=GMT%2b8
+spring.datasource.username = root
+spring.datasource.password = 123456
+spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
+
+# Mybatis
+mybatis.mapper-locations = classpath:mapper/*.xml
+mybatis.type-aliases-package = com.kci.moodstore.auth.model
+mybatis.configuration.useGeneratedKeys = true
+mybatis.configuration.mapUnderscoreToCamelCase = true
+
+pagehelper.propertyName=propertyValue
+pagehelper.reasonable=false
+pagehelper.defaultCount=true
 
