--- a/moodstore-framework/moodstore-framework-security/pom.xml
+++ b/moodstore-framework/moodstore-framework-security/pom.xml
@@ -14,4 +14,28 @@
         <version>1.0.0</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.kci.moodstore</groupId>
+            <artifactId>moodstore-api-auth</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <!--  SpringSecurity   -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+            <version>${spring-cloud-starter-oauth2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>8.16</version>
+        </dependency>
+    </dependencies>
+
 </project>
