前台用户Oauth2方式鉴权完成--v1

--- a/moodstore-gateway/src/main/resources/application.properties
+++ b/moodstore-gateway/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9011/rsa/
 
 #白名单
 secure.ignore.urls[0]=/actuator/**
-secure.ignore.urls[1]=/auth/oauth/token
+secure.ignore.urls[1]=/auth/token
