--- a/moodstore-auth/src/main/resources/application.properties
+++ b/moodstore-auth/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # 应用名称
 spring.application.name=moodstore-auth
-server.port=9011
+server.port=9091
 
-spring.cloud.nacos.discovery.server-addr= = localhost:8848
+spring.cloud.nacos.discovery.server-addr=43.139.188.90:8848
 
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.name = defaultDataSource
-spring.datasource.url = jdbc:mysql://localhost:3306/moodstore?serverTimezone=GMT%2b8
+spring.datasource.url = jdbc:mysql://43.139.188.90:3306/moodstore?serverTimezone=GMT%2b8
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
@@ -21,3 +21,11 @@ pagehelper.propertyName=propertyValue
 pagehelper.reasonable=false
 pagehelper.defaultCount=true
 
+#Redis
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.max-idle=8
+spring.redis.database=0
+spring.redis.port=6379
+#spring.redis.password=
+spring.redis.timeout=5000
+spring.redis.host=43.139.188.90
