--- a/moodstore-framework/moodstore-framework-cache/src/main/resources/application.properties
+++ b/moodstore-framework/moodstore-framework-cache/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.redis.jedis.pool.max-wait = -1ms
-#spring.redis.jedis.pool.max-idle = 8
-#spring.redis.database = 2
-#spring.redis.port = 6379
-#spring.redis.password=977594
-#spring.redis.timeout = 5000
-#spring.redis.host = localhost
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.max-idle=8
+spring.redis.database=0
+spring.redis.port=6379
+#spring.redis.password=
+spring.redis.timeout=5000
+spring.redis.host=43.139.188.90
