--- a/moodstore-pstest/src/main/resources/application.properties
+++ b/moodstore-pstest/src/main/resources/application.properties
@@ -10,11 +10,11 @@ spring.datasource.username = root
 spring.datasource.password = lzhlzh594594
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 
-spring.redis.host=localhost
+spring.redis.host=43.139.188.90
 spring.redis.port=6379
 spring.redis.database=3
 spring.redis.timeout=5000
-spring.redis.password=977594
+#spring.redis.password=977594
 
 spring.redis.lettuce.pool.max-active=30
 spring.redis.lettuce.pool.max-idle=8
@@ -22,7 +22,7 @@ spring.redis.lettuce.pool.max-wait=PT10S
 spring.redis.lettuce.pool.min-idle=1
 spring.redis.lettuce.pool.enabled=true
 
-spring.cloud.nacos.discovery.server-addr = localhost:8848
+spring.cloud.nacos.discovery.server-addr = 43.139.188.90:8848
 spring.cloud.nacos.discovery.register-enabled = true
 
 # Mybatis-Plus
