--- a/moodstore-framework/moodstore-framework-cache/src/main/resources/application.properties
+++ b/moodstore-framework/moodstore-framework-cache/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.redis.database=0
 spring.redis.port=6379
 #spring.redis.password=
 spring.redis.timeout=5000
-spring.redis.host=43.139.188.90
+spring.redis.host=
