230410_dailyCommit_oauth2bug_nofix

--- a/moodstore-api/moodstore-api-lottery/pom.xml
+++ b/moodstore-api/moodstore-api-lottery/pom.xml
@@ -2,10 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>moodstore-api-auth</artifactId>
+    <artifactId>moodstore-api-lottery</artifactId>
     <version>1.0.0</version>
-    <packaging>jar</packaging>
-    <description>解忧 - RPC API - Auth</description>
+    <name>moodstore-api-lottery</name>
 
     <parent>
         <artifactId>moodstore-api</artifactId>
@@ -13,5 +12,18 @@
         <version>1.0.0</version>
     </parent>
 
+    <packaging>jar</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
