--- a/moodstore-auth/src/main/resources/application.properties
+++ b/moodstore-auth/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 spring.application.name=moodstore-auth
 server.port=9091
 
-spring.cloud.nacos.discovery.server-addr=
+spring.cloud.nacos.discovery.server-addr=43.139.188.90:8848
 
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.name = defaultDataSource
-spring.datasource.url =
+spring.datasource.url = jdbc:mysql://43.139.188.90:3306/moodstore?serverTimezone=GMT%2b8
 spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.password = 123456
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 
 # Mybatis
@@ -28,4 +28,6 @@ spring.redis.database=0
 spring.redis.port=6379
 #spring.redis.password=
 spring.redis.timeout=5000
-spring.redis.host=
+spring.redis.host=43.139.188.90
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
