--- a/moodstore-framework/moodstore-framework-cache/src/main/resources/application.properties
+++ b/moodstore-framework/moodstore-framework-cache/src/main/resources/application.properties
@@ -1,7 +1,23 @@
-spring.redis.jedis.pool.max-wait=-1ms
-spring.redis.jedis.pool.max-idle=8
+# Redis数据库索引（默认为0）
 spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=43.139.188.90
+
+# Redis服务器连接端口
 spring.redis.port=6379
-#spring.redis.password=
-spring.redis.timeout=5000
-spring.redis.host=
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+##连接池最大连接数（使用负值表示没有限制） 默认8
+spring.redis.lettuce.pool.max-active=8
+## 连接池中的最大空闲连接 默认8
+spring.redis.lettuce.pool.max-idle=8
+## 连接池中的最小空闲连接 默认0
+spring.redis.lettuce.pool.min-idle=0
+
+#哨兵模式
+#redis.sentinel.host1=192.168.177.128
+#redis.sentinel.port1=26379
+
+#redis.sentinel.host2=172.20.1.231
+#redis.sentinel.port2=26379
+
