--- a/moodstore-framework/moodstore-framework-database/pom.xml
+++ b/moodstore-framework/moodstore-framework-database/pom.xml
@@ -14,7 +14,11 @@
         <version>1.0.0</version>
     </parent>
 
-<!--    <dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -27,6 +31,6 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-    </dependencies>-->
+    </dependencies>
 
 </project>
