--- a/moodstore-gateway/src/main/resources/application.properties
+++ b/moodstore-gateway/src/main/resources/application.properties
@@ -1,22 +1,51 @@
 # 应用名称
-spring.application.name=moodstore-gateway
-
-server.port=9012
-#nacos 暂未配置完成
-spring.cloud.nacos.discovery.server-addr=
-
-#gateway路由配置
-spring.cloud.gateway.routes[0].id=moodstore-api-route
-spring.cloud.gateway.routes[0].uri=lb://moodstore-api
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/**
-spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
-spring.cloud.gateway.routes[1].id=moodstore-auth-route
-spring.cloud.gateway.routes[1].uri=lb://moodstore-auth
-spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
-spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
-
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9011/rsa/publicKey
-
-#白名单
-secure.ignore.urls[0]=/actuator/**
-secure.ignore.urls[1]=/oauth/token
+#spring.application.name=moodstore-gateway
+#
+#server.port=9012
+##nacos
+#spring.cloud.nacos.discovery.server-addr=43.139.188.90:8848
+#
+##gateway路由配置
+#spring.cloud.gateway.routes[0].id=moodstore-api-route
+#spring.cloud.gateway.routes[0].uri=lb://moodstore-api
+#spring.cloud.gateway.routes[0].predicates[0]=Path=/api/**
+#spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+#spring.cloud.gateway.routes[1].id=moodstore-auth-route
+#spring.cloud.gateway.routes[1].uri=lb://moodstore-auth
+#spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
+#spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9091/rsa/publicKey
+#
+##白名单
+#secure.ignore.urls[1]=/oauth/token
+#
+#spring.main.allow-bean-definition-overriding=true
+#spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+#
+#
+#spring.profiles.active=dev
+#
+##redis
+#spring.redis.jedis.pool.max-wait=-1ms
+#spring.redis.jedis.pool.max-idle=8
+#spring.redis.database=10
+#spring.redis.port=6379
+#spring.redis.password=
+#spring.redis.timeout=5000
+#spring.redis.host=43.139.188.90
+#
+##mysql
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+#spring.datasource.name = defaultDataSource
+#spring.datasource.url = jdbc:mysql://43.139.188.90:3306/moodstore?serverTimezone=GMT%2b8
+#spring.datasource.username = root
+#spring.datasource.password = 123456
+#spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
+#
+## Mybatis
+#mybatis.mapper-locations = classpath:mapper/*.xml
+#mybatis.type-aliases-package = com.kci.moodstore.auth.model
+#mybatis.configuration.useGeneratedKeys = true
+#mybatis.configuration.mapUnderscoreToCamelCase = true
