--- a/moodstore-user/pom.xml
+++ b/moodstore-user/pom.xml
@@ -30,7 +30,14 @@
             <artifactId>moodstore-framework-common</artifactId>
             <version>1.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
