原版moodstore存档(pig前版本)

--- a/moodstore-community/moodstore-community-biz/src/main/resources/application.yml
+++ b/moodstore-community/moodstore-community-biz/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 7001
+  port: 9001
 
 spring:
   application:
@@ -21,5 +21,5 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://moodstore-mysql:3306/moodstore_community?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://moodstore-mysql:3306/moodstore_bbs?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
 
